<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.esamir.gvoice</groupId>
    <artifactId>wakeupAdam</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>project</name>
    <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <!-- Deployment -->
    <distributionManagement>  
      <snapshotRepository>  
        <id>snapshots</id>  
        <name>Internal Snapshots</name>  
        <url>http://javadev:8081/nexus/content/repositories/snapshots</url>
      </snapshotRepository>  
      <repository>
        <id>releases</id>
        <name>Internal Releases</name>
        <url>http://javadev:8081/nexus/content/repositories/releases</url>
      </repository>
    </distributionManagement>

	<scm>
        <connection>scm:svn:http://google-voice-java.googlecode.com/svn/branches/maven/</connection>
		<developerConnection>scm:svn:https://google-voice-java.googlecode.com/svn/branches/maven/</developerConnection>
		<url>http://google-voice-java.googlecode.com/svn/trunk/</url>
	</scm>

    <build>
        <testSourceDirectory>test</testSourceDirectory>
            <!-- Override defaults and set test source file directory -->
        <plugins>
            <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>exec-maven-plugin</artifactId>
              <version>1.1</version>
              <configuration>
                <executable>doxygen</executable>
                <arguments>
                    <argument>${basedir}/Doxyfile</argument>
                </arguments>
                <!-- optional -->
                <workingDirectory>${basedir}/</workingDirectory>
              </configuration>
              <executions>
                  <execution>
                      <goals>
                          <goal>exec</goal>
                      </goals>
                  </execution>
              </executions>
            </plugin>
            <!-- Override defaults and set source file directory -->
            <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>build-helper-maven-plugin</artifactId>
              <executions>
                <execution>
                   <phase>generate-sources</phase>
                   <goals><goal>add-source</goal></goals>
                   <configuration>
                       <forkMode>never</forkMode> 
                           <sources>
                               <source>src</source> 
                           </sources>
                   </configuration>
                </execution>
              </executions>
            </plugin>

            <!-- Compiler -->
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>2.3.2</version>
                    <configuration>
                      <fork>false</fork>
                      <compilerArgument>-Djava.endorsed.dirs=${basedir}/lib/endorsed</compilerArgument>
                      <source>1.6</source>
                      <target>1.6</target>
                      <systemProperties>
                        <property>
                          <name>java.endorsed.dirs</name>
                          <value>${basedir}/lib/endorsed</value>
                        </property>
                      </systemProperties>

                    </configuration>
            </plugin>
            <!-- Unit Test -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>

                <configuration>
                      <systemProperties>
                        <property>
                          <name>java.endorsed.dirs</name>
                          <value>${basedir}/lib/endorsed</value>
                        </property>
                      </systemProperties>


                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <mode>development</mode>
                            <url>${project.url}</url>
                        </manifestEntries>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>true</overWriteSnapshots>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>

    </build>



    <dependencies>
      <!-- JUNIT  -->
      <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <version>4.8.2</version>
      </dependency> 
      <dependency>
        <groupId>com.googlecode.google-voice-java</groupId>
        <artifactId>google-voice-java</artifactId>
        <version>2.0-SNAPSHOT</version>
      </dependency>
    </dependencies>
</project>




